--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2"
   },
+  "proxy":"http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "watch:sass": "node-sass src/sass/main.scss src/css/style.css -w",
