--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
-    "server":"nodemon index.js",
-    "dev":"concurrently \"npm run dev --prefix client\" \"npm run server\"",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "dev": "concurrently \"npm run dev --prefix client\" \"npm run server\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +16,7 @@
     "concurrently": "^5.0.0",
     "express": "^4.17.1",
     "nodemailer": "^6.3.1",
-    "nodemon": "^1.19.3"
+    "nodemon": "^1.19.3",
+    "pg": "^7.12.1"
   }
 }
