--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,10 @@
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
     "react-router-dom": "^5.1.1",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "use-global-hook": "^0.1.11"
   },
-  "proxy":"http://localhost:5000",
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "watch:sass": "node-sass src/sass/main.scss src/css/style.css -w",
