--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^5.0.0",
     "express": "^4.17.1",
     "nodemailer": "^6.3.1",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^1.19.3",
     "pg": "^7.12.1"
   }
